gcc/testsuite/rust/rustc/ui/issues/issue-44406.rs
macro_rules! foo {
    ($rest: tt) => {
        bar(baz: $rest)
    }
}

fn main() {
    foo!(true); // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-1 }
}

